--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -29,7 +29,12 @@ ul {
     margin: 0px;
 }
 
-/* TODO: Remove the padding to different  */
+
+.chosen{
+    border-bottom: 1px solid #4d4e4f
+}
+
+
 .centered {
     text-align: center;
     padding-top: 16px;
@@ -83,7 +88,7 @@ nav {
 #main {
     background-color: #fff;
     position: static;
-    margin-top: 80px;
+    margin-top: 100px;
     margin-right: 200px;
     margin-left: 200px;
     border-style: solid;
